fixed layout collapse and expand animation
sidebar layout fixed

--- a/styles/components/base.css
+++ b/styles/components/base.css
@@ -11,13 +11,13 @@
         @apply bg-gray-700/50 text-white backdrop-blur;
     }
     .twilight {
-        @apply dark--text flex h-screen bg-light-gray dark:bg-dark-secondary;
+        @apply dark--text h-screen bg-light-gray dark:bg-dark-secondary;
     }
     .twilight-body {
-        @apply flex flex-1 flex-col overflow-y-auto overflow-x-hidden transition-all duration-300;
+        @apply flex h-full flex-1 flex-col overflow-y-auto overflow-x-hidden transition-all duration-300 lg:ml-64;
     }
     .collapsible-vertical .twilight-body {
-        @apply lg:pl-[70px];
+        @apply lg:ml-[70px];
     }
     .twilight-content {
         @apply relative mx-auto px-6 pb-4 pt-2 dark:text-gray-300 md:pt-4;
